add documentation transform

--- a/pygame.html
+++ b/pygame.html
@@ -17,6 +17,7 @@
   <div class="band bandr"></div>
   <article>
     <p>Offizielle <a href="https://www.pygame.org/docs/" target="_blank"><code class="inline">pygame Dokumentation</code></a></p>
+    <p>&nbsp;</p>
     <h1>Einrichten</h1>
     <ol>
       <li><a href="./pygameinstall.html">Paket pygame in Thonny installieren</a></li>
@@ -33,8 +34,8 @@
       <li><a href="./scrolling.html">einen mitlaufenden Hintergrund</a></li>
       <li><a href="./maus.html">etwas mit der Maus steuern</a></li>
       <li><a href="./tastatur.html">auf Tastatureingaben reagieren</a></li>
-      <!--
-      <li>Elemente Verformen (drehen, vergrössern, verkleinern, ...)</li>https://www.pygame.org/docs/ref/transform.html
+      <li><a href="./transform.html">Elemente Verformen (drehen, spiegeln, verkleinern, ...)</a></li>
+      <!-- 
 	    <li>TODO 1 Animationen (z.B. laufender Figur)</li>
 if event.type == pygame.KEYDOWN and event.key == pygame.K_DOWN:
     player = pygame.image.load(images[counter])
