add base-documentation for music and sounds

--- a/pygame.html
+++ b/pygame.html
@@ -35,6 +35,7 @@
       <li><a href="./maus.html">etwas mit der Maus steuern</a></li>
       <li><a href="./tastatur.html">auf Tastatureingaben reagieren</a></li>
       <li><a href="./transform.html">Elemente Verformen (drehen, spiegeln, verkleinern, ...)</a></li>
+      <li><a href="./ton.html">Ton abspielen</a></li>
       <!-- 
 	    <li>TODO 1 Animationen (z.B. laufender Figur)</li>
 if event.type == pygame.KEYDOWN and event.key == pygame.K_DOWN:
@@ -43,7 +44,6 @@ if event.type == pygame.KEYDOWN and event.key == pygame.K_DOWN:
     playerY = playerY + 5
 ...
 
-      <li>TODO 2 Ton abspielen</li>https://www.pygame.org/docs/ref/mixer.html
       <li>TODO Kollisionen von Elementen erkennen</li>
       <li>TODO random -> externer Link (und Hinweis auf Klassennotizbuch)</li>
       <li>TODO Dateien Speichern -> Hinweis auf Klassennotizbuch</li>-->
