add animation documentation

--- a/pygame.html
+++ b/pygame.html
@@ -36,6 +36,7 @@
       <li><a href="./tastatur.html">auf Tastatureingaben reagieren</a></li>
       <li><a href="./transform.html">Elemente Verformen (drehen, spiegeln, verkleinern, ...)</a></li>
       <li><a href="./ton.html">Ton abspielen</a></li>
+      <li><a href="./animate.html">etwas animieren (z.B. Person laufen lassen)</a></li>
       <!-- 
 	    <li>TODO 1 Animationen (z.B. laufender Figur)</li>
 if event.type == pygame.KEYDOWN and event.key == pygame.K_DOWN:
@@ -43,8 +44,8 @@ if event.type == pygame.KEYDOWN and event.key == pygame.K_DOWN:
     counter = (counter + 1) % len(images)
     playerY = playerY + 5
 ...
-
       <li>TODO Kollisionen von Elementen erkennen</li>
+
       <li>TODO random -> externer Link (und Hinweis auf Klassennotizbuch)</li>
       <li>TODO Dateien Speichern -> Hinweis auf Klassennotizbuch</li>-->
     </ul>
