add collisions initial version

--- a/pygame.html
+++ b/pygame.html
@@ -37,15 +37,11 @@
       <li><a href="./transform.html">Elemente Verformen (drehen, spiegeln, verkleinern, ...)</a></li>
       <li><a href="./ton.html">Ton abspielen</a></li>
       <li><a href="./animate.html">etwas animieren (z.B. Person laufen lassen)</a></li>
+      <li><a href="./collisions.html">Kollidierende Elemente erkennen</a></li>
       <!-- 
-	    <li>TODO 1 Animationen (z.B. laufender Figur)</li>
-if event.type == pygame.KEYDOWN and event.key == pygame.K_DOWN:
-    player = pygame.image.load(images[counter])
-    counter = (counter + 1) % len(images)
-    playerY = playerY + 5
-...
-      <li>TODO Kollisionen von Elementen erkennen</li>
-
+        Menü erstellen
+fill als hintergrund
+drehen von ellipsen
       <li>TODO random -> externer Link (und Hinweis auf Klassennotizbuch)</li>
       <li>TODO Dateien Speichern -> Hinweis auf Klassennotizbuch</li>-->
     </ul>
