--- a/pygamebase.html
+++ b/pygamebase.html
@@ -95,6 +95,7 @@ while True:
             exit() # Beendet das Programm
     
     # ... Hier kommt dein Code
+    #FENSTER.fill("#FF00FF") # Füllt das Fenster in der gegebenen Farbe
     
     # Zeichnet das Fenster neu
     pygame.display.update()
