--- a/pygame.html
+++ b/pygame.html
@@ -38,10 +38,9 @@
       <li><a href="./ton.html">Ton abspielen</a></li>
       <li><a href="./animate.html">etwas animieren (z.B. Person laufen lassen)</a></li>
       <li><a href="./collisions.html">Kollidierende Elemente erkennen</a></li>
+      <li><a href="./menu.html">ein Menü erstellen / unterschiedliche Ansichten darstellen</a></li>
+      <li><a href="./pixelfarbe.html">die Farbe eines Pixels wissen</a></li>
       <!-- 
-        Menü erstellen
-fill als hintergrund
-drehen von ellipsen
       <li>TODO random -> externer Link (und Hinweis auf Klassennotizbuch)</li>
       <li>TODO Dateien Speichern -> Hinweis auf Klassennotizbuch</li>-->
     </ul>
