--- a/collisions.html
+++ b/collisions.html
@@ -48,7 +48,7 @@ kollisionen = rechteck.collidelist(rechteck_liste)
         Beispiel: angenommen <code class="inline">rechteck_2</code> und <code class="inline">rechteck_4</code> kollidieren mit <code class="inline">rechteck</code>. In dem Fall wird in <code class="inline">kollisionen</code> die Liste <code class="inline">[1,3]</code> gespeichert, denn die Rechtecke and den Index-Positionen 1 und 3 der <code class="inline">rechteck_liste</code> sind diejenigen mit Überschneindungen.
       </li>
     </ul>
-    <p>Es gibt noch ein paar weitere Befehle. Die Dokumentation dazu findest du auf <a href="https://www.pygame.org/docs/ref/rect.html" target="_blank"><code class="inline">rect</code></a>.</p>
+    <p>Es gibt noch mehrere weitere Befehle zur Kollisionsprüfung. Die Dokumentation dazu findest du auf <a href="https://www.pygame.org/docs/ref/rect.html" target="_blank"><code class="inline">rect</code></a>.</p>
     <p>&nbsp;</p>
     <h1>Kollision mit Bild</h1>
     <p>Soll ein Bild mit einem anderen objekt kollidieren, so ist eine Möglichkeit dafür, das Bildelement in ein Rechteck umzuwandeln und dann dieses (anstatt des ursprünglichen Bildes) zu zeichnen. Damit kann man wieder die oben dokumentierten Methoden zum Prüfen von Rechteckskollisionen verwenden. Natürlich kann man nicht nur eines, sondern auch mehrere Bilder in Rechtecke umwandeln und so auf Kollisionen prüfen. (Beispiel Bild/Animation siehe )</p>
